chore: README Git/Java 21 e parar de rastrear target/ Maven
Made-with: Cursor